updated VPP environment

--- a/Modifying_SwD_v7.7.ipynb
+++ b/Modifying_SwD_v7.7.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,18 +128,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Available Physical GPUs=>[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU'), PhysicalDevice(name='/physical_device:GPU:1', device_type='GPU')]\n",
-      "Configured Logical GPUs=>[LogicalDevice(name='/device:GPU:0', device_type='GPU'), LogicalDevice(name='/device:GPU:1', device_type='GPU')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Limiting GPU memory growth\n",
     "gpus = tf.config.list_physical_devices('GPU')\n",
@@ -165,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1068,9 +1059,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'gym' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 99\u001b[0m\n\u001b[0;32m     94\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m__len__\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m     95\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbuffer)\n\u001b[1;32m---> 99\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mVPPEnvironment\u001b[39;00m(gym\u001b[39m.\u001b[39mEnv):\n\u001b[0;32m    100\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, power_data):\n\u001b[0;32m    101\u001b[0m         \u001b[39msuper\u001b[39m(VPPEnvironment, \u001b[39mself\u001b[39m)\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'gym' is not defined"
+     ]
+    }
+   ],
    "source": [
     "class DDPG:\n",
     "    def __init__(self, state_dim, action_dim, lr_actor, lr_critic, gamma, tau):\n",
@@ -1222,6 +1225,8 @@
     "        reward                         = 0\n",
     "        charging_count                 = 0\n",
     "        discharging_count              = 0\n",
+    "        charging_count_na              = 0\n",
+    "        discharging_count_na           = 0\n",
     "        action_type                    = 'System Started'\n",
     "\n",
     "        # Agent's actions\n",
@@ -1238,6 +1243,7 @@
     "                action_type            = \"Charging[NA]\"\n",
     "                reward                -= 1\n",
     "                charge_amount          = 0\n",
+    "                charging_count_na     += 1\n",
     "        # ESS should be discharged unless it is almost empty during less power generation\n",
     "        elif clipped_action[1] > clipped_action[0] and clipped_action[1] > clipped_action[2]:\n",
     "            charge_amount              = 0\n",
@@ -1251,6 +1257,7 @@
     "                action_type            = \"Discharging[NA]\"\n",
     "                reward                -= 1\n",
     "                discharge_amount       = 0\n",
+    "                discharging_count_na  += 1\n",
     "        # ESS should be isolated when it is full and power generation meets demand\n",
     "        elif clipped_action[2] > clipped_action[0] and clipped_action[2] > clipped_action[1]:\n",
     "            action_type                = \"Isolated\"\n",
@@ -1291,14 +1298,16 @@
     "            'demand_deviation'       : self.demand_deviation,\n",
     "            'charging_count'         : charging_count,\n",
     "            'discharging_count'      : discharging_count,\n",
-    "            'action_value'           : clipped_action\n",
+    "            'action_value'           : clipped_action,\n",
+    "            'charging_count_na'      : charging_count_na,\n",
+    "            'discharging_count_na'   : discharging_count_na\n",
     "        }\n",
     "        return self._get_observation(action_level), reward, done, info"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1399,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1478,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1549,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1569,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
