--- a/Modifying_SwD_v7.7.ipynb
+++ b/Modifying_SwD_v7.7.ipynb
@@ -1049,7 +1049,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# __<u>DDPG-based Stochastic Optimal Power Flow Analysis of VPP</u>__\n",
+    "# __<u>Advanced DDPG for Enhanced SSLM in ESS and Solar-Integrated VPP</u>__\n",
+    "\n",
+    "> Harnessing Advanced <b>DDPG</b> Techniques for <b>Enhanced Safety and Sustainable Lifecycle Management</b> in Solar-Integrated Virtual Power Plants\n",
     "\n",
     "> Max Capacity of each PV sources is 100kW\n",
     "- If the energy storage system (ESS) has a capacity of 200 kWh and is currently at 0 kWh, we can calculate the time required to fully charge the ESS using a 100 kW solar panel system that is generating 80 kW instantaneously.\n",
